[Experimental] [CSS] Prevent long anchors from overflowing

--- a/static/styles/less/content.less
+++ b/static/styles/less/content.less
@@ -1,3 +1,7 @@
+a {
+	overflow-wrap: break-word;
+}
+
 code {
 	.ph(.25em);
 	color: lightseagreen;
